[DT-161] fix: all images has been transformed from 'png, jpg' to the 'webp' extension [DEV-UC]

--- a/account.html
+++ b/account.html
@@ -34,7 +34,7 @@
             <!-- User -->
             <div class="col-12 col-md-3">
                 <img 
-                    src="./public/images/user.jpg"
+                    src="./public/images/user.webp"
                     alt="user-profile"
                     class="img-fluid rounded-circle d-inline-block"
                     style="max-width: 150px;"
@@ -91,28 +91,28 @@
                 <div class="row g-3 justify-content-center">
 
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-point.jpg" class="img-fluid rounded-circle" alt="loyalty-point">
+                        <img src="./public/images/loyalty-point.webp" class="img-fluid rounded-circle" alt="loyalty-point">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-point.jpg" class="img-fluid rounded-circle" alt="loyalty-point">
+                        <img src="./public/images/loyalty-point.webp" class="img-fluid rounded-circle" alt="loyalty-point">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-section.jpg" class="img-fluid rounded-circle" alt="loyalty-section">
+                        <img src="./public/images/loyalty-section.webp" class="img-fluid rounded-circle" alt="loyalty-section">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-section.jpg" class="img-fluid rounded-circle" alt="loyalty-section">
+                        <img src="./public/images/loyalty-section.webp" class="img-fluid rounded-circle" alt="loyalty-section">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-section.jpg" class="img-fluid rounded-circle" alt="loyalty-section">
+                        <img src="./public/images/loyalty-section.webp" class="img-fluid rounded-circle" alt="loyalty-section">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-section.jpg" class="img-fluid rounded-circle" alt="loyalty-section">
+                        <img src="./public/images/loyalty-section.webp" class="img-fluid rounded-circle" alt="loyalty-section">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-section.jpg" class="img-fluid rounded-circle" alt="loyalty-section">
+                        <img src="./public/images/loyalty-section.webp" class="img-fluid rounded-circle" alt="loyalty-section">
                     </div>
                     <div class="col-6 col-sm-3 col-md-3">
-                        <img src="./public/images/loyalty-section.jpg" class="img-fluid rounded-circle" alt="loyalty-section">
+                        <img src="./public/images/loyalty-section.webp" class="img-fluid rounded-circle" alt="loyalty-section">
                     </div>
 
                 </div>
