--- a/signup/signup.html
+++ b/signup/signup.html
@@ -29,7 +29,7 @@
 
     <!-- Image Banner Placeholder -->
     <div class="row registration-banner">
-        <img src="/public/images/signup/coffe-bar.png" alt="Granos de café">
+        <img src="/public/images/signup/coffe-bar.webp" alt="Granos de café">
     </div>
 
     <!-- Registration Section -->
