--- a/about-us.html
+++ b/about-us.html
@@ -42,7 +42,7 @@
 
                 <div class="col-12 col-md-6">
                     <div class="section-image">
-                        <img src="/public/images/about-us/first-section.png" alt="Elaboración de café" class="img-fluid">
+                        <img src="/public/images/about-us/first-section.webp" alt="Elaboración de café" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
                     <div class="section-image">
-                        <img src="/public/images/about-us/second-section.png" alt="Máquina de café" class="img-fluid">
+                        <img src="/public/images/about-us/second-section.webp" alt="Máquina de café" class="img-fluid">
                     </div>
                 </div>
 
@@ -89,7 +89,7 @@
                 <div class="col-12 mb-4">
                     <div class="section-image mx-auto d-flex justify-content-center">
                         <div class="col-10 col-sm-8 col-md-6 col-lg-5">
-                            <img src="/public/images/about-us/owners.png" alt="Dueños de Lolo's Café"
+                            <img src="/public/images/about-us/owners.webp" alt="Dueños de Lolo's Café"
                                 class="img-fluid d-block mx-auto">
                         </div>
                     </div>
