--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
                 <div class="col-12 col-md-4 ">
                     <a href="/menu/with-coffee.html" class="category-card text-decoration-none text-reset d-block">
                         <div class="overflow-hidden" style="height: 100%;">
-                            <img src="/public/images/basic-menu/with-coffee.png" class="img-fluid mx-auto mx-sm-0"
+                            <img src="/public/images/basic-menu/with-coffee.webp" class="img-fluid mx-auto mx-sm-0"
                                 alt="Bebidas con café">
                         </div>
                         <div class="pt-2">
@@ -41,7 +41,7 @@
                 <div class="col-12 col-md-4">
                     <a href="/menu/without-coffee.html" class="category-card text-decoration-none text-reset d-block">
                         <div class="overflow-hidden" style="height: 100%;">
-                            <img src="/public/images/basic-menu/without-coffee.png" class="img-fluid mx-auto mx-sm-0"
+                            <img src="/public/images/basic-menu/without-coffee.webp" class="img-fluid mx-auto mx-sm-0"
                                 alt="Bebidas sin café">
                         </div>
                         <div class="pt-2">
@@ -54,7 +54,7 @@
                 <div class="col-12 col-md-4">
                     <a href="/menu/desserts.html" class="category-card text-decoration-none text-reset d-block">
                         <div class="overflow-hidden" style="height: 100%;">
-                            <img src="/public/images/basic-menu/desserts.png" class="img-fluid mx-auto mx-sm-0"
+                            <img src="/public/images/basic-menu/desserts.webp" class="img-fluid mx-auto mx-sm-0"
                                 alt="Postres">
                         </div>
                         <div class="pt-2">
