--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="main.css" />
 </head>
 
-<body>
+<body class="contact-page">
   <!-- Header -->
   <div id="header-placeholder"></div>
   <!-- Page Title -->
