[DT-165]refactor: reorganize menu pages and extract inline logic into JS/CSS modules [DEV-DM]

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
               loading="lazy">
             </iframe>
           </div>
-          <a class="cta-btn border-0 justify-content-center effect-contact text-decoration-none"
+          <a class="cta-btn border-0 justify-content-center effect-contact text-decoration-none text-center"
             href="https://maps.app.goo.gl/D9avTdeEV6jmAcP86" target="_blank">
             <i class="bi bi-geo-alt-fill"></i> CÓMO LLEGAR
           </a>
