--- a/menu/desserts.html
+++ b/menu/desserts.html
@@ -8,9 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles/main.css" />
+  
 </head>
 
-<body>
+<body class="products">
   <div id="header-placeholder"></div>
   <main>
     <header>
@@ -472,6 +473,7 @@
     crossorigin="anonymous"></script>
   <script type="module" src="/src/js/utils/loadComponents.js"></script>
   <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
+  
   <script type="module" src="/src/js/controllers/modalProductQuantity.js"></script>
   <script type="module" src="/src/js/ui/cartManagerDesserts.js"></script>
   <script type="module" src="/src/js/ui/checkoutHandler.js"></script>
