--- a/menu/delivery-method.html
+++ b/menu/delivery-method.html
@@ -180,10 +180,7 @@
             </div>
         </div>
     </div>
-    <!--  -->
-
-    <!-- Footer -->
-    <!-- Footer -->
+       <!-- Footer -->
     <div id="footer-placeholder"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -192,84 +189,10 @@
     <script src="/src/utils/validationSignup.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
-    <script>
-
-        document.addEventListener('DOMContentLoaded', () => {
-  // Obtenemos los datos guardados
-  const datos = localStorage.getItem('carrito_final');
-
-  if (datos) {
-    const productosParaPagar = JSON.parse(datos);
-    console.log("Datos recibidos con éxito:", productosParaPagar);
-    
-    // Ahora puedes usar 'productosParaPagar' para llenar tu nueva interfaz
-  } else {
-    console.error("No se encontraron productos en el carrito.");
-  }
-});
-    </script>
+    <script type="module" src="/src/js/ui/checkoutDeliveryMethod.js"></script>
+    <script type="module" src="/src/js/ui/showCheckout.js"></script>
 
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const listaFinal = document.getElementById('listaFinal');
-  const totalFinal = document.getElementById('totalFinal');
-  const subtotalFinal = document.getElementById('subtotalFinal');
-
-  // 1. Recuperar los datos de LocalStorage
-  const datos = localStorage.getItem('carrito_final');
-
-  if (datos) {
-    const productos = JSON.parse(datos);
-    let totalAcumulado = 0;
-
-    listaFinal.innerHTML = ''; // Limpiar por si acaso
-
-    // 2. Pintar cada producto
-    productos.forEach(item => {
-      const subtotalItem = item.precio * item.cantidad;
-      totalAcumulado += subtotalItem;
-
-      listaFinal.innerHTML += `
-        <div class="d-flex align-items-center justify-content-between py-3 border-bottom">
-          <div class="d-flex align-items-center gap-3">
-            <img src="${item.imagen}" alt="${item.nombre}" style="width: 70px; height: 70px; object-fit: contain;" class="rounded bg-light">
-            <div>
-              <h6 class="mb-0 fw-bold">${item.nombre}</h6>
-              <small class="text-muted">${item.size} x ${item.cantidad}</small>
-              ${item.notas ? `<p class="mb-0 small text-muted font-italic">Nota: ${item.notas}</p>` : ''}
-            </div>
-          </div>
-          <div class="text-end">
-            <span class="fw-bold">$${subtotalItem.toFixed(2)}</span>
-          </div>
-        </div>
-      `;
-    });
-
-    // 3. Actualizar los totales
-    subtotalFinal.innerText = `$${totalAcumulado.toFixed(2)}`;
-    totalFinal.innerText = `$${totalAcumulado.toFixed(2)}`;
-
-  } else {
-    // Si no hay datos, mostrar mensaje de error o redirigir
-    listaFinal.innerHTML = `
-      <div class="text-center py-5">
-        <i class="bi bi-cart-x fs-1 text-muted"></i>
-        <p class="mt-2">No encontramos productos en tu orden.</p>
-        <a href="index.html" class="btn btn-outline-dark btn-sm">Volver al menú</a>
-      </div>
-    `;
-  }
-});
-
-function procesarPago() {
-    alert("¡Pedido procesado con éxito!");
-    // Aquí podrías limpiar el carrito si ya terminó la compra
-    // localStorage.removeItem('carrito_final');
-}
-
-</script>
 </body>
 
 </html>
