--- a/login/login.html
+++ b/login/login.html
@@ -27,18 +27,18 @@
         </div>
     </section>
 
-    <!-- Image Banner Placeholder
-    <div class="row registration-banner">
-        <img src="/public/images/signup/coffe-bar.png" alt="Frapucchino de chocolate">
-    </div> -->
-
     <!-- Registration Section -->
     <section class="registration-section-complete">
         <div class="container">
+            <div class="row">
+                <!-- Image Banner -->
+                <div class="col-md-6 d-flex align-items-center justify-content-center">
+                    <img src="/public/images/login/coffe-bar.png" alt="Lolo's Café" class="img-fluid">
+                </div>
 
-            <!-- Form -->
-            <div class="col-md-6 offset-md-3 registration-form-complete">
-                <p class="registration-subtitle">Inicia sesión para adminstrar tu cuenta</p>
+                <!-- Form -->
+                <div class="col-md-6 registration-form-complete">
+                <p class="registration-subtitle">Inicia sesión para administrar tu cuenta</p>
 
                 <!-- Email -->
                 <div class="mb-3">
@@ -51,11 +51,11 @@
                     </div>
                 </div>
 
-                <!-- Contraseña -->
+                <!-- Password -->
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
                     <input type="password" id="password" name="password"
-                        class="form-control" required>
+                        class="form-control" placeholder="Ingresa tu contraseña" required>
                     <div class="invalid-feedback">
                         Mínimo 8 caracteres. Al menos una letra y un número.
                     </div>
@@ -63,7 +63,7 @@
 
                  <!-- Recovery Password link -->
                     <p class="d-flex justify-content-center">
-                        ¿Olvidaste tu contraseña? <a href="#" data-bs-toggle="modal" data-bs-target="#modalRecovery"> Recupérala aquí</a>
+                        ¿Olvidaste tu contraseña?&nbsp;&nbsp;<a href="#" class="text-decoration-underline text-dark" data-bs-toggle="modal" data-bs-target="#modalRecovery">Recupérala aquí</a>
                     </p>
 
                     <!-- MODAL -->
@@ -116,16 +116,17 @@
                         </div>
                     </div>
 
-                <!-- Botón -->
+                <!-- Button -->
                 <div class="register-btn">
-                    <button type="submit" id="submit-btn" class="btn btn-dark w-100"> INICIAR SESIÓN →
+                    <button type="submit" id="submit-btn" class="menu-btn w-100"> INICIAR SESIÓN →
                     </button>
                 </div>
                 </form>
 
                 <!-- Login Link -->
                 <div class="login-link">
-                    <p>¿Aún no tienes una cuenta? <a href="/signup/signup.html">Regístrate aquí</a> y obtén beneficios</p>
+                    <p>¿Aún no tienes una cuenta? <a href="/signup/signup.html" class="text-decoration-underline text-dark">Regístrate aquí</a> y obtén beneficios</p>
+                </div>
                 </div>
             </div>
         </div>
