"[DT-165] refactor: create menu pages and extract inline logic into JS/CSS modules [DEV-DM]"

--- a/menu/desserts.html
+++ b/menu/desserts.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles/main.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   
 </head>
 
@@ -27,14 +28,14 @@
       </div>
     </header>
     <!-- Selection Bar -->
-    <div class="d-flex w-100 text-center top-buttons container">
+    <div class="d-flex w-100 text-center top-buttons-menu container">
       <a href="/menu/with-coffee.html" class="flex-fill btn btn-outline-dark rounded-0">CON CAFÉ</a>
       <a href="/menu/without-coffee.html" class="flex-fill btn btn-outline-dark rounded-0">SIN CAFÉ</a>
       <a href="/menu/desserts.html" class="flex-fill btn btn-dark rounded-0">POSTRES</a>
     </div>
 
     <!-- Desserts -->
-    <div class="container container-fluid d-flex justify-content-around flex-wrap">
+    <div class="container d-flex justify-content-around flex-wrap">
       <div class="row">
 
         <!-- Brownie -->
@@ -115,10 +116,10 @@
           </div>
         </div>
 
-        <!-- Cheescake Tortuga -->
+        <!-- Cheesecake Tortuga -->
         <div class="col-6 col-md-4 col-lg-3 mb-4 dessert">
 
-          <div class="card h-100" data-bs-toggle="modal" data-bs-target="#modalPostres" data-nombre="Cheescake Tortuga"
+          <div class="card h-100" data-bs-toggle="modal" data-bs-target="#modalPostres" data-nombre="Cheesecake Tortuga"
             data-precio="65.00" data-descripcion="Cremoso queso con chocolate, caramelo y trozos de nuez pecana."
             data-imagen="/public/images/basic-menu/desserts/cheesecaketortuga.webp">
 
@@ -131,7 +132,7 @@
             </div>
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-start mb-2">
-                <h6 class="card-title mb-0 fw-bold">Cheescake Tortuga </h6>
+                <h6 class="card-title mb-0 fw-bold">Cheesecake Tortuga </h6>
                 <span class="price fw-bold">$65.00</span>
               </div>
               <p class="card-text text-muted" style="font-size: 1rem;">
