--- a/menu/with-coffee.html
+++ b/menu/with-coffee.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú - Con Café</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles/main.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
 </head>
 
-<bod class="products>
+<body class="products">
 <div id="header-placeholder"></div>
 <main>
   <header>
@@ -30,7 +31,7 @@
 
 
 
-    <div class="d-flex w-100 text-center top-buttons container" >
+    <div class="d-flex w-100 text-center top-buttons-menu container" >
       <a href="/menu/with-coffee.html" class="flex-fill btn btn-dark rounded-0">CON CAFÉ</a>
       <a href="/menu/without-coffee.html" class="flex-fill btn btn-outline-dark rounded-0">SIN CAFÉ</a>
       <a href="/menu/desserts.html" class="flex-fill btn btn-outline-dark rounded-0">POSTRES</a>
@@ -40,7 +41,7 @@
     
 
       <!-- Coffee drinks -->
-    <div class="container container-fluid d-flex justify-content-around flex-wrap">
+    <div class="container d-flex justify-content-around flex-wrap">
       <div class="row">
 
         <!-- Affogato -->
@@ -702,7 +703,7 @@
                 </div>
                 <div class="text-end">
                   <span class="fw-bold me-2">Total</span>
-                  <span class="fw-bold fs-5" id="modal-total-dinamico">$ 0.00</span>
+                  <span class="fw-bold fs-5" id="cartTotal">$ 0.00</span>
                 </div>
               </div>
 
