--- a/menu/without-coffee.html
+++ b/menu/without-coffee.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú - Sin Café</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles/main.css" />
-  <link rel="stylesheet" href="/src/styles/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
 
 <body class="products">
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <div class="d-flex w-100 text-center top-buttons container">
+    <div class="d-flex w-100 text-center top-buttons-menu container">
       <a href="/menu/with-coffee.html" class="flex-fill btn btn-outline-dark rounded-0">CON CAFÉ</a>
       <a href="/menu/without-coffee.html" class="flex-fill btn btn-dark rounded-0">SIN CAFÉ</a>
       <a href="/menu/desserts.html" class="flex-fill btn btn-outline-dark rounded-0">POSTRES</a>
@@ -35,7 +35,7 @@
 
 
     <!-- Without Coffee drinks -->
-    <div class="container container-fluid d-flex justify-content-around flex-wrap">
+    <div class="container d-flex justify-content-around flex-wrap">
       <div class="row">
 
         <!-- Arandano Tónico -->
@@ -615,7 +615,7 @@
           </div>
         </div>
 
-         <!-- Soda Lavanda -->
+        <!-- Soda Lavanda -->
         <div class="col-6 col-md-4 col-lg-3 mb-4 drink" >
           <div class="card h-100 product-card" data-bs-toggle="modal" data-bs-target="#modalDrinks" data-product='{
       "name": "Soda Lavanda",
@@ -671,7 +671,7 @@
           </div>
         </div>
 
-         <!-- Taro -->
+        <!-- Taro -->
         <div class="col-6 col-md-4 col-lg-3 mb-4 drink" >
           <div class="card h-100 product-card" data-bs-toggle="modal" data-bs-target="#modalDrinks" data-product='{
       "name": "Taro",
