feat: implement universal shopping cart with persistence and proper checkout.[DEV-MV]

--- a/admin/configuration.html
+++ b/admin/configuration.html
@@ -282,6 +282,7 @@
 
     <!-- Components loader (header/sidebar) -->
     <script type="module" src="/src/js/utils/loadComponents.js"></script>
+    <script type="module" src="/src/js/utils/cartSync.js"></script>
 
     <!-- Page-specific logic (kept inline to make this a single-file example) -->
     <script type="module" src="/src/js/admin/configuration.js"></script>
