--- a/admin/orders.html
+++ b/admin/orders.html
@@ -167,6 +167,7 @@
   <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
   <!-- Header/Sidebar -->
   <script type="module" src="/src/js/utils/loadComponents.js"></script>
+  <script type="module" src="/src/js/utils/cartSync.js"></script>
 
   <script type="module" src="/src/js/admin/orders.js"></script>
 </body>
