--- a/admin/users.html
+++ b/admin/users.html
@@ -165,6 +165,7 @@
     crossorigin="anonymous"></script>
 
   <script type="module" src="/src/js/utils/loadComponents.js"></script>
+  <script type="module" src="/src/js/utils/cartSync.js"></script>
 
   <script type="module" src="/src/js/admin/users.js"></script>
 </body>
