--- a/admin/products.html
+++ b/admin/products.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/src/styles/main.css" />
 </head>
@@ -475,6 +476,7 @@
 
     <!-- Components loader -->
     <script type="module" src="/src/js/utils/loadComponents.js"></script>
+    <script type="module" src="/src/js/utils/cartSync.js"></script>
     <!-- Admin-specific JS
     <script src="/src/js/adminMenu.ui.js" defer></script> -->
 
