--- a/menu/delivery-method.html
+++ b/menu/delivery-method.html
@@ -8,6 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <link rel="stylesheet" href="/src/styles/layout/_header.css" />
     <link rel="stylesheet" href="/src/styles/layout/_footer.css" />
@@ -24,7 +25,7 @@
                 <div class="d-flex align-items-center mb-4">
                     <!-- TODO: Link the future page of "arma tu bebida" when the page is done -->
                     <a href="#" class="text-decoration-none text-dark me-3 fs-4">
-                        <i class="bi bi-arrow-left"></i> &larr;
+                        <i class="bi bi-arrow-left"></i>
                     </a>
                     <h2 class="fw-bold m-0">Forma de entrega</h2>
                 </div>
@@ -186,6 +187,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <script type="module" src="/src/js/utils/loadComponents.js"></script>
+    <script type="module" src="/src/js/utils/cartSync.js"></script>
     <script src="/src/utils/validationSignup.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
