--- a/menu/with-coffee.html
+++ b/menu/with-coffee.html
@@ -703,7 +703,7 @@
                 </div>
                 <div class="text-end">
                   <span class="fw-bold me-2">Total</span>
-                  <span class="fw-bold fs-5" id="cartTotal">$ 0.00</span>
+                  <span class="fw-bold fs-5" id="modal-total-dinamico">$ 0.00</span>
                 </div>
               </div>
 
@@ -762,6 +762,7 @@
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <script type="module" src="/src/js/utils/loadComponents.js"></script>
+  <script type="module" src="/src/js/utils/cartSync.js"></script>
   <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
   
   
