--- a/menu/without-coffee.html
+++ b/menu/without-coffee.html
@@ -987,6 +987,7 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
   <script type="module" src="/src/js/utils/loadComponents.js"></script>
+  <script type="module" src="/src/js/utils/cartSync.js"></script>
   <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
   
   <script type="module" src="/src/js/controllers/modalProductQuantity.js"></script>
