--- a/signupOld.html
+++ b/signupOld.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Lolo's Café</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 <body class="page-signup page-signup-step1">
@@ -86,6 +87,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <script type="module" src="/src/js/utils/loadComponents.js"></script>
+    <script type="module" src="/src/js/utils/cartSync.js"></script>
     <script src="/src/js/validators/validationSignup.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
