[DT-158] feat: implement user authentication and LocalStorage persistence [DEV-DM]

--- a/login/login.html
+++ b/login/login.html
@@ -57,7 +57,7 @@
                     <input type="password" id="password" name="password"
                         class="form-control" placeholder="Ingresa tu contraseña" required>
                     <div class="invalid-feedback">
-                        Mínimo 8 caracteres. Al menos una letra y un número.
+                        Mínimo 8 caracteres. Al menos una letra,un número y un carácter especial.
                     </div>
                 </div>
 
@@ -138,8 +138,10 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <script src="/src/js/utils/loadComponents.js"></script>
-    <script src="/src/js/validators/validationContactDetails.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
+    <script type="module" src="/login/validationLogin.js"></script>
+    <script type="module" src="/login/encriptLogin.js"></script>
+    <script type="module" src="/login/authenticationLogin.js"></script>
 
 </body>
 </html>
