[DT-158] feat: implement user authentication and LocalStorage persistence [DEV-DM]

--- a/login/login.html
+++ b/login/login.html
@@ -139,6 +139,7 @@
         crossorigin="anonymous"></script>
     <script src="/src/js/utils/loadComponents.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
+    <!-- Validations -->
     <script type="module" src="/src/js/validators/validationLogin.js"></script>
     <script type="module" src="/src/js/validators/encriptLogin.js"></script>
     <script type="module" src="/src/js/validators/authenticationLogin.js"></script>
