refactor: Registrate button path changed to index/index.html.[DEV-MV]

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           gratis, como un beneficio por elegirnos.
         </p>
 
-        <a href="/signup.html" class="cta-btn">
+        <a href="/login/login.html" class="cta-btn">
           REGÍSTRATE AHORA →
         </a>
       </div>
