--- a/menu/delivery-method.html
+++ b/menu/delivery-method.html
@@ -143,7 +143,7 @@
                     <h3 class="fw-bold mb-3">¡Pedido confirmado con éxito!</h3>
 
                     <div class="mb-3">
-                        <img src="/public/images/delivery-method/coffee.svg" height="80">
+                        <img class="mx-auto" src="/public/images/delivery-method/coffee.svg" height="80">
                     </div>
 
                     <p class="mb-1">Recibimos tu pedido correctamente</p>
