feat: replace placeholders with actual drink names and location name fixed[DEV-MV]

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="me-1" id="weather-icon" src="/public/images/hero-banner/icon-weather/cloudy.png" alt="Clima"
           width="32">
         <span id="weather-temp" class="ms-2"> -- °C </span>
-        <p class="mb-0 ms-3">Valle de Carrizo</p>
+        <p class="mb-0 ms-3">Valle del Carrizo</p>
       </div>
       <div class="row align-items-center">
         <!-- Hero Image -->
