[Fix: Api users

--- a/admin/users.html
+++ b/admin/users.html
@@ -57,6 +57,9 @@
           </ul>
         </div>
 
+        <!-- Div for user.js Usuarios API -->
+        <div id="usersApi"></div>
+
         <!-- Table -->
         <div class="card-clean mt-3">
           <div class="table-responsive">
