refactor: login flow not doing register anymore

--- a/login/login.html
+++ b/login/login.html
@@ -118,10 +118,11 @@
 
                 <!-- Button -->
                 <div class="register-btn">
-                    <button type="submit" id="submit-btn" class="menu-btn w-100"> INICIAR SESIÓN →
-                    </button>
+                    <button type="submit" id="submit-btn" class="menu-btn w-100"> INICIAR SESIÓN →</button>
                 </div>
-                </form>
+                <!-- feedback message -->
+                <p id="message" class="text-danger py-1 fw-semibold text-center"></p>
+            </form>
 
                 <!-- Login Link -->
                 <div class="login-link">
@@ -142,7 +143,7 @@
     <!-- Validations -->
     <script type="module" src="/src/js/validators/validationLogin.js"></script>
     <script type="module" src="/src/js/validators/encriptLogin.js"></script>
-    <script type="module" src="/src/js/validators/authenticationLogin.js"></script>
+    <!-- <script type="module" src="/src/js/validators/authenticationLogin.js"></script> -->
 
 </body>
 </html>
