[DT-163] refactor: reorganize HTML files and apply minor normalization updates in admin pages

--- a/UI/about-us.html
+++ b/UI/about-us.html
@@ -143,7 +143,7 @@
                     Ya sea que busques el rincón perfecto para una charla larga entre amigos, o seas un viajero que necesita pausar el camino para recargar energías en un ambiente acogedor, aquí siempre habrá un asiento reservado para ti.
                 </p>
 
-                <a href="menu.html" class="cta-btn d-inline-block" role="button">
+                <a href="/UI/menu.html" class="cta-btn d-inline-block" role="button">
                     EXPLORA NUESTRO MENÚ
                 </a>
                 </div>
