--- a/UI/privacy-policy.html
+++ b/UI/privacy-policy.html
@@ -17,7 +17,7 @@
         <!-- Page Title -->
         <section class="section-white">
             <div class="container py-4 py-md-5 d-flex gap-3">
-                <a href="#" class="back-btn">←</a>
+                <a href="/index.html" class="back-btn">←</a>
                 <h1>Aviso de privacidad</h1>
             </div>
         </section>
