--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Administración del Menú - Lolo's Café</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="/src/styles/main.css" />
-  </head>
+</head>
 
-  <body>
-    <!-- Header -->
-    <!-- <div id="header-placeholder"></div> -->
+<body>
 
-   <!-- Content -->
+<!-- Content -->
     <main class="row container-fluid mx-auto">
-      <section id="sidebar-placeholder" class="admin-sidebar-container col-3 p-3 border-end">
-      </section>
-      <!-- Dashboard Title Content -->
+        <section id="sidebar-placeholder" class="admin-sidebar-container col-12 col-md-2 p-2 border-end min-vh-100">
+        </section>
+    <!-- Dashboard Title Content -->
         <section class="dashboard-admin col-9 p-3 container">
             <div class="header-dashboard pt-5 px-5 pb-1 d-flex justify-content-between align-items-start">
                 <div>
