--- a/admin/orders.html
+++ b/admin/orders.html
@@ -20,9 +20,6 @@
 </head>
 
 <body>
-  <!-- Header / Sidebar  -->
-  <div id="header-placeholder"></div>
-
   <main class="container-fluid">
     <div class="row g-0">
       <section id="sidebar-placeholder" class="col-12 col-md-2 p-2 border-end min-vh-100"></section>
@@ -35,7 +32,7 @@
             <h3 class="page-title ms-0 ps-0 mb-0 align-items-start">Pedidos</h3>
             <p class="page-subtitle mb-0">Control de las órdenes del día</p>
           </div>
-          <div class="toolbar">
+          <div class="toolbar m-2 p-2">
             <input id="searchBox" class="form-control form-control-sm" type="search" placeholder="Buscar por cliente, código o artículo…">
           </div>
         </div>
