--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Siente el clima perfecto mientras disfrutas de nuestra selección de bebidas calientes y refrescantes.
           </p>
           <div>
-            <a href="/menu.html" class="cta-btn-secondary mt-3">EXPLORA NUESTRO MENÚ →</a>
+            <a href="/UI/menu.html" class="cta-btn-secondary mt-3">EXPLORA NUESTRO MENÚ →</a>
           </div>
         </div>
 
@@ -127,7 +127,7 @@
               Cada café, postre y detalle está pensado para que cada visita se
               disfrute sin prisas.
             </p>
-            <a href="/about-us.html" class="cta-btn mt-3" style="display: inline-block;">
+            <a href="/UI/about-us.html" class="cta-btn mt-3" style="display: inline-block;">
               Conoce nuestra historia →
             </a>
           </div>
@@ -234,7 +234,7 @@
             gratis, como un beneficio por elegirnos.
           </p>
 
-          <a href="/login/login.html" class="cta-btn">
+          <a href="/UI/login/login.html" class="cta-btn">
             REGÍSTRATE AHORA →
           </a>
         </div>
