--- a/login/login.html
+++ b/login/login.html
@@ -57,11 +57,11 @@
                     <input type="password" id="password" name="password"
                         class="form-control" placeholder="Ingresa tu contraseña" required>
                     <div class="invalid-feedback">
-                        Mínimo 8 caracteres. Al menos una letra,un número y un carácter especial.
+                        Mínimo 8 caracteres. Al menos una letra y un número.
                     </div>
                 </div>
 
-                 <!-- Recovery Password link -->
+                <!-- Recovery Password link -->
                     <p class="d-flex justify-content-center">
                         ¿Olvidaste tu contraseña?&nbsp;&nbsp;<a href="#" class="text-decoration-underline text-dark" data-bs-toggle="modal" data-bs-target="#modalRecovery">Recupérala aquí</a>
                     </p>
