--- a/menu/delivery-method.html
+++ b/menu/delivery-method.html
@@ -19,7 +19,7 @@
 
         <div class="d-flex align-items-center mb-4">
             <!-- TODO: Link the future page of "arma tu bebida" when the page is done -->
-            <a href="/menu.html" class="text-decoration-none text-dark me-3 fs-4">
+            <a href="/UI/menu.html" class="text-decoration-none text-dark me-3 fs-4">
                 <i class="bi bi-arrow-left"></i>
             </a>
             <h2 class="fw-bold m-0">Forma de entrega</h2>
@@ -41,7 +41,7 @@
                     <div class="collapse mt-4" id="formPickUpOnSite" data-bs-parent="#formGroups">
                         <div class="card card-body border-0 p-0 col-12 mx-auto">
                             <div class="text-center mb-3">
-                                <a href="./contact-details.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios
+                                <a href="/login/login.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios
                                 <br> o <br>
                                 Continua sin cuenta
                             </div>
@@ -70,7 +70,7 @@
                     <div class="collapse mt-4" id="FormDelivery" data-bs-parent="#formGroups">
                         <div class="card card-body border-0 p-0 col-12 mx-auto">
                             <div class="text-center mb-3">
-                                <a href="./contact-details.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios
+                                <a href="/login/login.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios
                                 <br> o <br>
                                 Continua sin cuenta
                             </div>
