--- a/menu/desserts.html
+++ b/menu/desserts.html
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="row align-items-center my-0 ms-n2 g-3">
             <div class="col-auto ms-n5">
-              <a href="/menu.html" class="back-btn">←</a>
+              <a href="/UI/menu.html" class="back-btn">←</a>
             </div>
             <div class="col-auto d-flex align-items-center">
               <h1 class="mb-0">Nuestro menú</h1>
