--- a/signup/signup.html
+++ b/signup/signup.html
@@ -47,7 +47,7 @@
                     <!-- Name -->
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombre</label>
-                        <input type="text" id="name" name="name" class="form-control" placeholder="Sergio" required>
+                        <input type="text" id="name" name="name" class="form-control" placeholder="Daniel" required>
                         <div class="invalid-feedback">
                             Ingresa un nombre válido (solo letras).
                         </div>
@@ -56,7 +56,7 @@
                     <!-- Last Name -->
                     <div class="mb-3">
                         <label for="last-name" class="form-label">Apellido</label>
-                        <input type="text" id="last-name" name="last-name" class="form-control" placeholder="Pérez"
+                        <input type="text" id="last-name" name="last-name" class="form-control" placeholder="Martínez"
                             required>
                         <div class="invalid-feedback">
                             Ingresa un apellido válido (solo letras).
