--- a/menu/with-coffee.html
+++ b/menu/with-coffee.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row align-items-center my-0 ms-n2 g-3">
           <div class="col-auto ms-n5">
-            <a href="/menu.html" class="back-btn">←</a>
+            <a href="/UI/menu.html" class="back-btn">←</a>
           </div>
           <div class="col-auto d-flex align-items-center">
             <h1 class="mb-0">Nuestro menú</h1>
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-     <!-- Sidebar Shopping Cart -->
+  <!-- Sidebar Shopping Cart -->
   <div class="modal fade" id="modalCarrito" tabindex="-1">
     <div class="modal-dialog modal-dialog-end modal-full-height">
       <div class="modal-content">
