--- a/menu/without-coffee.html
+++ b/menu/without-coffee.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú - Sin Café</title>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles/main.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
@@ -19,7 +19,7 @@
         <div class="container">
           <div class="row align-items-center my-0 ms-n2 g-3">
             <div class="col-auto ms-n5">
-              <a href="/menu.html" class="back-btn">←</a>
+              <a href="/UI/menu.html" class="back-btn">←</a>
             </div>
             <div class="col-auto d-flex align-items-center">
               <h1 class="mb-0">Nuestro menú</h1>
@@ -152,7 +152,7 @@
       </div>
     </div>
 
-         <!-- Sidebar Shopping Cart -->
+  <!-- Sidebar Shopping Cart -->
   <div class="modal fade" id="modalCarrito" tabindex="-1">
     <div class="modal-dialog modal-dialog-end modal-full-height">
       <div class="modal-content">
